--- a/security/libssh/Makefile
+++ b/security/libssh/Makefile
@@ -7,7 +7,7 @@ CATEGORIES=	security devel
 MASTER_SITES=	https://www.libssh.org/files/0.8/
 
 MAINTAINER=	johans@FreeBSD.org
-COMMENT=	Library implementing the SSH1 and SSH2 protocol
+COMMENT=	Library implementing the SSH2 protocol
 
 LICENSE=	LGPL21
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -15,7 +15,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 BROKEN_SSL=	openssl111
 BROKEN_SSL_REASON_openssl111=	error: variable has incomplete type 'EVP_MD_CTX' (aka 'struct evp_md_ctx_st')
 
-OPTIONS_DEFINE=	SSH1 STATIC
+OPTIONS_DEFINE=	STATIC
 OPTIONS_RADIO=	CRYPTO
 OPTIONS_RADIO_CRYPTO=	GCRYPT OPENSSL
 OPTIONS_DEFAULT=	OPENSSL STATIC
@@ -34,10 +34,6 @@ GCRYPT_CMAKE_ON=	-DWITH_GCRYPT:BOOL=ON
 GCRYPT_CMAKE_OFF=	-DWITH_GCRYPT:BOOL=OFF
 
 OPENSSL_USES=		ssl
-
-SSH1_DESC=		Build with SSH1 support
-SSH1_CMAKE_ON=		-DWITH_SSH1:BOOL=ON
-SSH1_CMAKE_OFF=		-DWITH_SSH1:BOOL=OFF
 
 STATIC_CMAKE_ON=	-DWITH_STATIC_LIB:BOOL=ON
 STATIC_CMAKE_OFF=	-DWITH_STATIC_LIB:BOOL=OFF
