--- a/devel/py-click/Makefile
+++ b/devel/py-click/Makefile
@@ -2,17 +2,18 @@
 # $FreeBSD$
 
 PORTNAME=	click
-PORTVERSION=	6.7
-PORTREVISION=	1
+PORTVERSION=	7.0
 CATEGORIES=	devel python
-MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	robak@FreeBSD.org
 COMMENT=	Python package for creating command line interfaces
 
 LICENSE=	BSD3CLAUSE
-LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE_FILE=	${WRKSRC}/LICENSE.rst
+
+USE_GITHUB=	yes
+GH_ACCOUNT=	pallets
 
 TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest>0:devel/py-pytest@${PY_FLAVOR}
 
