graphics/py-cairocffi:
PR:		237884
Submitted by:
Reported by:
Reviewed by:
Approved by:
Obtained from:
MFC after:
MFH:
Relnotes:
Security:
Sponsored by:
Differential Revision:
#
# Description of fields to fill in above:                     76 columns --|
# PR:                       If and which Problem Report is related.
# Submitted by:             If someone else sent in the change.
# Reported by:              If someone else reported the issue.
# Reviewed by:              If someone else reviewed your modification.
# Approved by:              If you needed approval for this commit.
# Obtained from:            If the change is from a third party.
# MFC after:                N [day[s]|week[s]|month[s]].  Request a reminder email.
# MFH:                      Ports tree branch name.  Request approval for merge.
# Relnotes:                 Set to 'yes' for mention in release notes.
# Security:                 Vulnerability reference (one per line) or description.
# Sponsored by:             If the change was sponsored by an organization.
# Differential Revision:    https://reviews.freebsd.org/D### (*full* phabric URL needed).
#
# See 'Commit Log Messages' in the Committer's Guide for details.
#
# -------------------------------------------------------------------------
# To use this template, run this command from the top of the ports tree.
#
#	git config commit.template .gitmessage
# -------------------------------------------------------------------------

--- a/graphics/py-cairocffi/Makefile
+++ b/graphics/py-cairocffi/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	cairocffi
-PORTVERSION=	0.8.0
-PORTREVISION=	2
+PORTVERSION=	1.0.2
 CATEGORIES=	graphics python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -15,7 +14,9 @@ LICENSE=	BSD3CLAUSE
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cffi>0:devel/py-cffi@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}xcffib>=0.5.0:x11/py-xcffib@${PY_FLAVOR}
-BUILD_DEPENDS=	${RUN_DEPENDS}
+
+BUILD_DEPENDS=	${RUN_DEPENDS} \
+		${PYTHON_PKGNAMEPREFIX}pytest-runner>0:devel/py-pytest-runner@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	distutils py3kplist
