--- a/databases/py-mycli/Makefile
+++ b/databases/py-mycli/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	mycli
 PORTVERSION=	1.19.0
+PORTEPOCH=		1
 CATEGORIES=	databases python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
