sysutils/py-salt:
PR:		237971
Submitted by:
Reported by:
Reviewed by:
Approved by:
Obtained from:
MFC after:
MFH:
Relnotes:
Security:
Sponsored by:
Differential Revision:
#
# Description of fields to fill in above:                     76 columns --|
# PR:                       If and which Problem Report is related.
# Submitted by:             If someone else sent in the change.
# Reported by:              If someone else reported the issue.
# Reviewed by:              If someone else reviewed your modification.
# Approved by:              If you needed approval for this commit.
# Obtained from:            If the change is from a third party.
# MFC after:                N [day[s]|week[s]|month[s]].  Request a reminder email.
# MFH:                      Ports tree branch name.  Request approval for merge.
# Relnotes:                 Set to 'yes' for mention in release notes.
# Security:                 Vulnerability reference (one per line) or description.
# Sponsored by:             If the change was sponsored by an organization.
# Differential Revision:    https://reviews.freebsd.org/D### (*full* phabric URL needed).
#
# See 'Commit Log Messages' in the Committer's Guide for details.
#
# -------------------------------------------------------------------------
# To use this template, run this command from the top of the ports tree.
#
#	git config commit.template .gitmessage
# -------------------------------------------------------------------------

--- a/sysutils/py-salt/Makefile
+++ b/sysutils/py-salt/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	salt
 PORTVERSION=	2019.2.0
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	sysutils python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -75,7 +75,8 @@ RAET_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}libnacl>=1.0.0:security/py-libnacl@${PY
 			${PYTHON_PKGNAMEPREFIX}ioflo>=1.1.7:devel/py-ioflo@${PY_FLAVOR} \
 			${PYTHON_PKGNAMEPREFIX}raet>=0.6.0:net/py-raet@${PY_FLAVOR}
 
-TCP_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycrypto>=2.6.1:security/py-pycrypto@${PY_FLAVOR}
+TCP_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycrypto>=2.6.1:security/py-pycrypto@${PY_FLAVOR} \
+			${PYTHON_PKGNAMEPREFIX}pyzmq>=2.2.0:net/py-pyzmq@${PY_FLAVOR}
 
 ZEROMQ_BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyzmq>=2.2.0:net/py-pyzmq@${PY_FLAVOR}
 ZEROMQ_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyzmq>=2.2.0:net/py-pyzmq@${PY_FLAVOR} \
