multimedia/gnome-twitch:
PR:		238005
Submitted by:
Reported by:
Reviewed by:
Approved by:
Obtained from:
MFC after:
MFH:
Relnotes:
Security:
Sponsored by:
Differential Revision:
#
# Description of fields to fill in above:                     76 columns --|
# PR:                       If and which Problem Report is related.
# Submitted by:             If someone else sent in the change.
# Reported by:              If someone else reported the issue.
# Reviewed by:              If someone else reviewed your modification.
# Approved by:              If you needed approval for this commit.
# Obtained from:            If the change is from a third party.
# MFC after:                N [day[s]|week[s]|month[s]].  Request a reminder email.
# MFH:                      Ports tree branch name.  Request approval for merge.
# Relnotes:                 Set to 'yes' for mention in release notes.
# Security:                 Vulnerability reference (one per line) or description.
# Sponsored by:             If the change was sponsored by an organization.
# Differential Revision:    https://reviews.freebsd.org/D### (*full* phabric URL needed).
#
# See 'Commit Log Messages' in the Committer's Guide for details.
#
# -------------------------------------------------------------------------
# To use this template, run this command from the top of the ports tree.
#
#	git config commit.template .gitmessage
# -------------------------------------------------------------------------

--- a/multimedia/gnome-twitch/Makefile
+++ b/multimedia/gnome-twitch/Makefile
@@ -2,8 +2,8 @@
 
 PORTNAME=	gnome-twitch
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.4.1-147
-DISTVERSIONSUFFIX=	-gbbca68b
+DISTVERSION=	0.4.1-155
+DISTVERSIONSUFFIX=	-g8e774a0
 CATEGORIES=	multimedia
 
 MAINTAINER=	greg@unrelenting.technology
