--- a/science/InsightToolkit/Makefile
+++ b/science/InsightToolkit/Makefile
@@ -53,8 +53,16 @@ TESTING_DESC=	Build testing programs (very time consuming)
 EXAMPLES_CMAKE_ON=	-DBUILD_EXAMPLES:BOOL=ON
 TESTING_CMAKE_ON=	-DBUILD_TESTING:BOOL=ON
 
+.include <bsd.port.pre.mk>
+
+.if ${CHOSEN_COMPILER_TYPE} == gcc
+PLIST_SUB+=	CLANG="@comment " GCC=""
+.else
+PLIST_SUB+=	CLANG="" GCC="@comment "
+.endif
+
 post-extract:
 	${MV} ${WRKDIR}/${PORTNAME}-${PORTVERSION}/.ExternalData/* ${WRKSRC}/.ExternalData/
 	${RM} -r ${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
